--- a/src/com/codebind/App.form
+++ b/src/com/codebind/App.form
@@ -238,6 +238,14 @@
           </model>
         </properties>
       </component>
+      <component id="bf323" class="javax.swing.JCheckBox" binding="echoServerCheckBox" default-binding="true">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="EchoServer"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
